--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
-
     <main role="main">
-
         {% for year, year_articles in articles|groupby('date.year')|reverse %}
             <div class="row">
                 <div class="col-lg-12 spacer-top">
-
-                    <h2 class="text-center lead">{{ year }}</h2>
-
+                    <h1 class="text-center light">{{ year }}</h1>
                 </div>
             </div>
-
             {% for month, month_articles in year_articles|groupby('date.month')|reverse %}
-                    {% for article in month_articles %}
-
-
-
+                {% for article in month_articles %}
                     <div class="row flex-column-reverse flex-md-row spacer-bottom">
                         <div class="col-md-10">
-
                             <h5 class="lead">
                                 <a href="{{ SITEURL }}/{{ article.url }}">
                                     {{ article.title }}
                                 </a>
                             </h5>
-
                         </div>
-
                         <div class="col-md-2 date-column">
-
                             <h5 class="lead">
                                 <time class="light" datetime="{{ article.date.isoformat() }}">{{ article.date.strftime('%b %d') }}</time>
                             </h5>
-
                         </div>
-
                     </div>
-
-
                 {% endfor %}
-
             {% endfor %}
         {% endfor %}
-
     </main>
-
-
-
-
-
 {% endblock content %}
