--- a/static/css/simplicidade.css
+++ b/static/css/simplicidade.css
@@ -123,7 +123,8 @@ body {
 }
 
 .col-md-10 a:hover, footer .lead a:hover {
-  color: #2c2c2c;
+  color: #ff4c05;
+  text-decoration: none;
 }
 
 a {
