--- a/templates/podcast.html
+++ b/templates/podcast.html
@@ -11,7 +11,12 @@
                     {{ article.title }}
                 </h1>
                 <p class="sub-title">
-                    <time datetime="{{ article.date.isoformat() }}">{{ article.date.strftime('%b %d, %Y') }}</time>&nbsp;<a href="{{ SITEURL }}/{{ article.category.url }}" class="badge badge-light light">{{ article.category }}</a>
+                    <time datetime="{{ article.date.isoformat() }}">
+                        {{ article.date.strftime('%b %d, %Y') }}
+                    </time>&nbsp;
+                    <a href="{{ SITEURL }}/{{ article.category.url }}" class="badge badge-light light">
+                        {{ article.category }}
+                    s</a>
                 </p>
             </div>
         </div>
