--- a/templates/tags.html
+++ b/templates/tags.html
@@ -17,7 +17,9 @@
                             <a href="{{ SITEURL }}/{{ tag.0.url }}">
                                 {{ tag.0.name }}
                             </a>
-                            <a href="{{ SITEURL }}/{{ tag.0.url }}" class="badge badge-light light">{{ tag.2 }}</a>
+                            <a href="{{ SITEURL }}/{{ tag.0.url }}" class="badge badge-light light">
+                                {{ tag.2 }}
+                            </a>
                         </li>
                     {% endfor %}
                 </ul>
