--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,7 +17,9 @@
                                 <a href="{{ SITEURL }}/{{ category.url }}">
                                     {{ category }}
                                 </a>
-                                <a href="{{ SITEURL }}/{{ category.url }}" class="badge badge-light light">{{ articles|count }}</a>
+                                <a href="{{ SITEURL }}/{{ category.url }}" class="badge badge-light light">
+                                    {{ articles|count }}
+                                </a>
                             </li>
                         {% endfor %}
                     </ul>
