--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,9 @@
                         </div>
                         <div class="col-md-2 date-column">
                             <h5 class="lead">
-                                <time class="light" datetime="{{ article.date.isoformat() }}">{{ article.date.strftime('%b %d') }}</time>
+                                <time class="light" datetime="{{ article.date.isoformat() }}">
+                                    {{ article.date.strftime('%b %d') }}
+                                </time>
                             </h5>
                         </div>
                     </div>
