--- a/static/css/simplicidade.css
+++ b/static/css/simplicidade.css
@@ -4,29 +4,15 @@ body {
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
 .footer {
-  padding-right: 1rem;
   padding-left: 1rem;
-}
-
-/* Custom page header */
-.header {
-  padding-bottom: 1rem;
-}
-
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 3rem;
+  padding-right: 1rem;
 }
 
 /* Custom page footer */
 .footer {
-  padding-top: 1.5rem;
   color: #777;
+  padding-top: 1.5rem;
 }
 
 /* Customize container */
@@ -42,39 +28,18 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
   background-color: transparent;
-  border: 0rem;
-
+  border: 0;
+  text-align: center;
 }
+
 .jumbotron .btn {
-  padding: .75rem 1.5rem;
   font-size: 1.5rem;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 3rem 0;
-}
-.marketing p + h4 {
-  margin-top: 1.5rem;
+  padding: .75rem 1.5rem;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 48em) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 2rem;
-  }
-
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
@@ -83,25 +48,15 @@ body {
 
 /* Responsive: Portrait tablets and up */
 @media screen and (max-width: 768px) {
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 2rem;
-  }
-
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
 
-  div h5 {
-    margin-bottom: 0px;
-    color: lightgray;
-    text-align: left;
-  }
-
   /* Move date on div */
   .date-column {
-    text-align: left;
+    color: #d3d3d3;
+    margin-bottom: 0;
   }
 
   /* Spacer to separe contents */
@@ -114,8 +69,8 @@ body {
 .sub-title {
   font-size: 1.25rem;
   font-weight: 300;
-  margin-top: -0.7rem;
   margin-bottom: 2.5rem;
+  margin-top: -0.7rem;
 }
 
 .col-md-10 a, footer .lead a {
@@ -137,13 +92,13 @@ a:hover {
   font-weight: 100;
 }
 
-.jumbotron h1 a, .jumbotron h1 a:hover {
+.jumbotron a, .jumbotron a:hover {
   color: #2c2c2c;
   text-decoration: none;
 }
 
 .light {
-    font-weight: 100;
+  font-weight: 100;
 }
 
 .spacer-top {
@@ -156,47 +111,47 @@ a:hover {
 }
 
 /* tag cloud */
-ul.tagcloud {
+ul .tagcloud {
   list-style: none;
   padding: 0;
   text-align: center;
 }
 
-ul.tagcloud a {
+ul .tagcloud a {
   color: #2c2c2c;
   text-decoration: none;
 }
 
-ul.tagcloud a:hover {
+ul .tagcloud a:hover {
   color: #2c2c2c;
   text-decoration: underline;
 }
 
-ul.tagcloud li {
+ul .tagcloud li {
     display: inline-block;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
 
-li.tag-1 {
+li .tag-1 {
     font-size: 150%;
 }
 
-li.tag-2 {
+li .tag-2 {
     font-size: 120%;
 }
 
-li.tag-3 {
+li .tag-3 {
     font-size: 130%;
 }
 
-li.tag-4 {
+li .tag-4 {
     font-size: 140%;
 }
 
-ul.tagcloud .list-group-item <span>.badge {
-    background-color: grey;
-    color: white;
+ul .tagcloud .list-group-item span .badge {
+    background-color: #808080;
+    color: #fff;
 }
 
 /* Plyr custom */
