--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
                                 </a>
                             </h5>
                         </div>
-                        <div class="col-md-2 date-column">
-                            <h5 class="lead">
+                        <div class="col-md-2">
+                            <h5 class="lead date-column text-left">
                                 <time class="light" datetime="{{ article.date.isoformat() }}">
                                     {{ article.date.strftime('%b %d') }}
                                 </time>
