--- a/templates/podcast.html
+++ b/templates/podcast.html
@@ -13,10 +13,7 @@
                 <p class="sub-title">
                     <time datetime="{{ article.date.isoformat() }}">
                         {{ article.date.strftime('%b %d, %Y') }}
-                    </time>&nbsp;
-                    <a href="{{ SITEURL }}/{{ article.category.url }}" class="badge badge-light light">
-                        {{ article.category }}
-                    </a>
+                    </time>
                 </p>
             </div>
         </div>
