--- a/templates/base.html
+++ b/templates/base.html
@@ -53,8 +53,23 @@
     <div class="container">
 
         <div class="jumbotron">
-          <h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
-          {% if SITESUBTITLE %} <p class="lead">{{ SITESUBTITLE }}</p>{% endif %}
+            {% if LOGO_URL %}<p class="text-center"><a href="{{ SITEURL }}"><img src="{{ LOGO_URL }}" width="200"></a></p>{% endif %}
+            <h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
+            {% if SITESUBTITLE %}<p class="lead">{{ SITESUBTITLE }}</p>{% endif %}
+            <p class="lead">
+                {% if USE_CUSTOM_MENU %}
+                    {% for name, url in CUSTOM_MENUITEMS %}
+                        <a href="{{ SITEURL }}/{{ url }}">{{ name|lower }}</a>
+                        {% if CUSTOM_MENUITEMS[-1][0] != name %}
+                            &nbsp;·&nbsp;
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    {% for name, url in pages %}
+                        <a href="{{ SITEURL }}/{{ url }}">{{ name|lower }}</a>
+                    {% endfor %}
+                {% endif %}
+            </p>
         </div>
 
         {% block content %}
@@ -66,19 +81,14 @@
                 {% if USE_CUSTOM_MENU %}
                     {% for name, url in CUSTOM_MENUITEMS %}
                         <a href="{{ SITEURL }}/{{ url }}">{{ name|lower }}</a>
+                        {% if CUSTOM_MENUITEMS[-1][0] != name %}
+                            &nbsp;·&nbsp;
+                        {% endif %}
                     {% endfor %}
-                {% endif %}
-
-                {% if NEWSLETTER_URL %} 
-                    &nbsp;·&nbsp;<a href="{{ NEWSLETTER_URL }}" target="_blank">newsletter</a>
-                {% endif %}
-
-                {% if CATEGORY_URL %}
-                    &nbsp;·&nbsp;<a href="{{ SITEURL }}/c">categorias</a>
-                {% endif %}
-
-                {% if FEED_ALL_ATOM %}
-                    &nbsp;·&nbsp;<a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}">rss</a>
+                {% else %}
+                    {% for name, url in pages %}
+                        <a href="{{ SITEURL }}/{{ url }}">{{ name|lower }}</a>
+                    {% endfor %}
                 {% endif %}
 
             </p>
