--- a/templates/rss.html
+++ b/templates/rss.html
@@ -2,18 +2,11 @@
 
 {% block content %}
     <main role="main">
-<!--         <div class="row">
-            <div class="col-lg-12">
-                <h1>
-                    Todos os feeds
-                </h1>
-            </div>
-        </div> -->
         <div class="row">
             <div class="col-lg-12">
-                <p>
-                    Lista com todos os feeds que são gerados pelo blog
-                </p>
+                <h1>
+                    RSS Feeds
+                </h1>
             </div>
         </div>
         <div class="row">
